0023268: cppcheck warning: Using size of pointer WIDTHMAP instead of size of its data.

Using the size of the array in bytes.